# MIRA-DEPLOYMENT

./: .gitattributes  .gitignore  .replit  AUTH0_SETUP.md  DATABASE_DESIGN.md  DATABASE_DESIGN_README.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile  QPA_2.py  README.md  SETUP_OCR.md  check_and_fix_server.sh  deploy.sh  deploy_frontend_fix.sh  doubt_solver_api.py  fastapi_exam_api.py  fastapi_test_output_4444.json  final_agentic_m4.py  final_agentic_m4_RAG_logic.py  fix_database_endpoint.sh  fix_deployment.sh  fix_saved_content_issue.sh  lesson_generator_api.py  manual_deploy.sh  nginx.conf  nginx_mira-app_fixed.conf  nginx_mira.conf  nginx_mira_basic.conf  nginx_mira_ssl.conf  package-lock.json  package.json  practice_playground_api.py  pyproject.toml  replit.md  replit_python_only.sh  replit_start.sh  requirements.txt  requirements1.txt  restart_fastapi.sh  (+11 more)
attached_assets/: Pasted-a-to-find-I-I-P-V-n-Discuss-the-implications-of-power-ratings-in-household-devices-n--1751302524685_1751302524686.txt  Pasted-class-PedagogyExpertAgent-Agent-Agent-specialized-in-problem-solving-approaches-and-numeric-1750425053951_1750425053952.txt
cbse_validation_db/: chroma.sqlite3
chroma_db_electricity/: chroma.sqlite3
chroma_db_lesson_ncjescsa12_5f4260ed17/: chroma.sqlite3
client/: index.html
migrations/: 001_teacher_content_tables.sql
server/: aiExamRoutes.ts  aiTutorRoutes.ts  authMiddleware.ts  authRoutes.ts  doubtRoutes.ts  index.prod.ts  index.ts  lessonRoutes.ts  practicePlaygroundRoutes.ts  routes.ts  storage.ts  teacherContentRoutes.ts  vite.ts
(+28 files in other folders)
